finished most of the program, having some UI glitches

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="backbutton_read">Back</string>
     <string name="read_scroll">Read</string>
     <string name="proverbs_verse">Verse</string>
+    <string name="aboutUs">A digital sanctuary where ancient wisdom meets modern solace.\n\nThe path ahead may be unclear, but at The Proverbial Path, you are never alone. Step onto the sun-dappled trail, open your heart to the words of wisdom, and let your journey begin. Whether you seek direction in the labyrinth of love, strength against life\'s tempests, or simply the quiet murmur of reassurance, tread The Proverbial Path. Let its verses light your way, unraveling the tangled skein of your journey.</string>
 
 
 </resources>
